<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.RegisterActivity"
    android:background="@drawable/gradasi_bg2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/img_rgs_1"
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:src="@drawable/develov_logo" />

        <TextView
            android:id="@+id/txt_rgs_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img_rgs_1"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="40dp"
            android:text="Daftar"
            android:textColor="#2054C4"
            android:textSize="20dp"
            android:textStyle="bold" />

        <LinearLayout
            android:id="@+id/ln_rgs_1"
            android:layout_width="391dp"
            android:layout_height="332dp"
            android:layout_below="@+id/txt_rgs_1"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_nama"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:drawableLeft="@drawable/ic_person1"
                android:drawablePadding="10dp"
                android:hint="@string/nama"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edt_userName"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_username"
                android:drawablePadding="10dp"
                android:hint="@string/userName"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />

            <EditText
                android:id="@+id/edt_password"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:layout_marginTop="20dp"
                android:drawableLeft="@drawable/ic_lock1"
                android:drawablePadding="10dp"
                android:hint="@string/password"
                android:inputType="textPassword" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/ln_rgs_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/ln_rgs_1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="20dp">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/outline"
                android:text="@string/register"
                android:textAllCaps="false"
                android:textColor="#FFFFFF" />


        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/ln_rgs_2"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="Sudah punya akun? Masuk" />

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>