<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    card_view:strokeWidth="1dp"
    card_view:strokeColor="#D9D9D9"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_item_profil"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="20dp"
            android:layout_marginStart="16dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profil"
            card_view:shapeAppearanceOverlay="@style/roundedImageViewRounded" />

        <TextView
            android:id="@+id/tv_item_profil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            android:text="@string/nama_profile"
            android:textColor="@color/black"
            android:textSize="13sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/img_item_profil"/>

        <TextView
            android:id="@+id/tv_item_judul"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:text="@string/judul_post"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_below="@id/img_item_profil"/>

        <TextView
            android:id="@+id/tv_item_deskripsi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_item_judul"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/deskripsi_post"
            android:textColor="@color/black"/>

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/img_item_post"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_below="@id/tv_item_deskripsi"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:src="@drawable/mentor1"
            android:scaleType="centerCrop"
            card_view:shapeAppearanceOverlay="@style/ImageagakKotak"/>

        <ImageView
            android:id="@+id/btn_item_komentar"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_toRightOf="@id/img_item_post"
            android:layout_below="@+id/tv_item_deskripsi"
            android:layout_marginTop="35dp"
            android:layout_marginLeft="280dp"
            android:src="@drawable/ic_komen"/>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>